--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Agency Perfect</title>
+    <title>World of Aswanth </title>
 
     <meta name="description" content="">
     <meta name="author" content="">
@@ -24,8 +24,8 @@
 
     <!-- Favicon
     ================================================== -->
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/channel-icon.jpg">
+    <link rel="icon" type="image/jpg" sizes="16x16" href="assets/img/fchannel-icon2.jpg">
 
     <!-- Stylesheets
     ================================================== -->
