--- a/portfolio.html
+++ b/portfolio.html
@@ -60,12 +60,11 @@
 
                     <ul class="nav navbar-nav navbar-right">
 
-                        <li class="active"><a href="index.html" data-toggle="dropdown">Home</a></li>
+                        <li><a href="index.html" data-toggle="dropdown">Home</a></li>
                       
-                        <li><a href="portfolio.html">Portfolio</a></li>
+                        <li class="active"><a href="portfolio.html">Portfolio</a></li>
                         <li><a href="contact.html">Contact</a></li>
-                        <!-- <li><a href="blog.html">Blog</a></li> -->
-                        <!-- <li><a href="ui-elements.html">UI Elements</a></li> -->
+                        
 
                     </ul>
 
