--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
 
                         <li><a href="index.html" data-toggle="dropdown">Home</a></li>
                       
-                        <li class="active"><a href="portfolio.html">Portfolio</a></li>
+                        <li class="active"><a href="portfolio.html" data-toggle="dropdown">Youtube Videos</a></li>
                         <li><a href="contact.html">Contact</a></li>
                         
 
