--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
                       
                         <li><a href="portfolio.html">Portfolio</a></li>
                         <li><a href="contact.html">Contact</a></li>
-                        <!-- <li><a href="blog.html">Blog</a></li> -->
-                        <!-- <li><a href="ui-elements.html">UI Elements</a></li> -->
+                      
 
                     </ul>
 
@@ -77,9 +76,9 @@
     <div id="hero" class="hero overlay">
         <div class="hero-content">
             <div class="hero-text">
-                <h1>Your story begins from here.</h1>
-                <p>Your clients on the internet. Learn how to receive them.</p>
-                <a href="#" class="btn btn-border">Learn more</a>
+                <h1>Explore My World.</h1>
+                <p>Your Happiness is my Happiness</p>
+                <a href="site-section section-feature" class="btn btn-border">Learn more</a>
             </div><!-- /.hero-text -->
         </div><!-- /.hero-content -->
     </div><!-- /.hero -->
@@ -90,8 +89,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-5">
-                        <h2>Responsive web design</h2>
-                        <p>Responsive Web design is the approach that suggests that design and development should respond to the user's behavior and environment based on screen size, platform and orientation. The practice consists of a mix of flexible grids and layouts, images and an intelligent use of CSS media queries</p>
+                        <h2>About Me</h2>
+                        <p> I'm Aswanth from World of Aswanth.Welcome to My small world .I am a student,newbie Youtuber and aim for to become a software engineer.  </p>
                     </div>
                     <div class="col-sm-7 hidden-xs">
                         <img src="assets/img/ipad-pro.png" alt="">
@@ -113,7 +112,7 @@
                     <div class="col-lg-4 col-md-3 col-xs-6" data-groups='["facts"]'>
                         <div class="portfolio-item">
                             <img src="assets/img/thumb-1.jpg" class="img-res" alt="">
-                            <h4 class="portfolio-item-title">Portfolio item</h4>
+                            <h4 class="portfolio-item-title">About The Video</h4>
                             <a href="https://www.youtube.com/embed/1CemcnStdLQ"><i class="fa fa-arrow-right"
                                     aria-hidden="true"></i></a>
                         </div><!-- /.portfolio-item -->
@@ -121,15 +120,15 @@
                     <div class="col-lg-4 col-md-3 col-xs-6" data-groups='["reactions"]'>
                         <div class="portfolio-item">
                             <img src="assets/img/thumb-2.jpg" class="img-res" alt="">
-                            <h4 class="portfolio-item-title">Portfolio item</h4>
+                            <h4 class="portfolio-item-title">About The Video</h4>
                             <a href="https://www.youtube.com/embed/4KRJ7GAOuzs"><i class="fa fa-arrow-right"
                                     aria-hidden="true"></i></a>
                         </div><!-- /.portfolio-item -->
                     </div>
                     <div class="col-lg-4 col-md-3 col-xs-6" data-groups='["technology"]'>
                         <div class="portfolio-item">
-                            <img src="assets/img/thumb-3.jpg" class="img-res" alt="">
-                            <h4 class="portfolio-item-title">Portfolio item</h4>
+                            <img src="assets/img/thumb-3.png" class="img-res" alt="">
+                            <h4 class="portfolio-item-title">About The Video</h4>
                             <a href="https://www.youtube.com/embed/F3qqVaCSl0I"><i class="fa fa-arrow-right"
                                     aria-hidden="true"></i></a>
                         </div><!-- /.portfolio-item -->
@@ -145,7 +144,7 @@
                     <div class="col-lg-4 col-md-3 col-xs-6" data-groups='["reactions"]'>
                         <div class="portfolio-item">
                             <img src="assets/img/thumb-5.jpg" class="img-res" alt="">
-                            <h4 class="portfolio-item-title">Portfolio item</h4>
+                            <h4 class="portfolio-item-title">About The Video</h4>
                             <a href="https://www.youtube.com/embed/fO8rvSzH18Y"><i class="fa fa-arrow-right"
                                     aria-hidden="true"></i></a>
                         </div><!-- /.portfolio-item -->
@@ -153,7 +152,7 @@
                     <div class="col-lg-4 col-md-3 col-xs-6" data-groups='["facts"]'>
                         <div class="portfolio-item">
                             <img src="assets/img/thumb-6.jpg" class="img-res" alt="">
-                            <h4 class="portfolio-item-title">Portfolio item</h4>
+                            <h4 class="portfolio-item-title">About The Videom</h4>
                             <a href="https://www.youtube.com/embed/V0jgmICL5bM"><i class="fa fa-arrow-right"
                                     aria-hidden="true"></i></a>
                         </div><!-- /.portfolio-item -->
@@ -161,14 +160,14 @@
                     <div class="col-lg-4 col-md-4 col-xs-6" data-groups='["facts"]'>
                         <div class="portfolio-item">
                             <img src="assets/img/thumb-7.jpg" class="img-res" alt="">
-                            <h4 class="portfolio-item-title">Portfolio item</h4>
+                            <h4 class="portfolio-item-title">About The Video </h4>
                             <a href=""><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
                         </div><!-- /.portfolio-item -->
                     </div>
                     <div class="col-lg-3 col-md-4 col-xs-6">
                         <div class="portfolio-item">
                             <img src="assets/img/portfolio-2.jpg" class="img-res" alt="">
-                            <h4 class="portfolio-item-title">Portfolio item</h4>
+                            <h4 class="portfolio-item-title">About The Video</h4>
                             <a href="portfolio-item.html"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
                         </div><!-- /.portfolio-item -->
                     </div>
@@ -230,7 +229,7 @@
                     </div>
                     <div class="col-xs-4">
                         <div class="text-right">
-                            <p>&copy; worldofaswanth</p>
+                            <p>&copy;redesign by worldofaswanth</p>
                             <p>All Rights Reserved</p>
                         </div>
                     </div>
