--- a/portfolio.html
+++ b/portfolio.html
@@ -119,7 +119,7 @@
                     </div>
                     <div class="col-lg-4 col-md-3 col-xs-6" data-groups='["technology"]'>
                         <div class="portfolio-item">
-                            <img src="assets/img/thumb-3.jpg" class="img-res" alt="">
+                            <img src="assets/img/thumb-3.png" class="img-res" alt="">
                             <h4 class="portfolio-item-title">Portfolio item</h4>
                             <a href="https://www.youtube.com/embed/F3qqVaCSl0I"><i class="fa fa-arrow-right"
                                     aria-hidden="true"></i></a>
