--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
                         <li class="active"><a href="index.html" data-toggle="dropdown">Home</a></li>
                       
-                        <li><a href="portfolio.html">Portfolio</a></li>
+                        <li><a href="portfolio.html">Youtube Video</a></li>
                         <li><a href="contact.html">Contact</a></li>
                       
 
