Updated files and Html

--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
 
                         <li class="active"><a href="index.html" data-toggle="dropdown">Home</a></li>
                       
-                        <li><a href="portfolio.html">Portfolio</a></li>
+                        <li><a href="youtube-sec.html">Youtube-Video</a></li>
                         <li><a href="contact.html">Contact</a></li>
                    
 
@@ -167,7 +167,7 @@
                     <h3>Featured links</h3>
                     <ul class="list-unstyled">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="portfolio.html">Porfolio</a></li>
+                        <li><a href="youtube-sec.html">Youtube-Video</a></li>
                         <li class="active"><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
