--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
                         <li class="active"><a href="index.html" data-toggle="dropdown">Home</a></li>
                       
-                        <li><a href="portfolio.html">Youtube Video</a></li>
+                        <li><a href="youtube-sec.html">Youtube Video</a></li>
                         <li><a href="contact.html">Contact</a></li>
                       
 
@@ -93,7 +93,7 @@
                         <p> I'm Aswanth from World of Aswanth.Welcome to My small world .I am a student,newbie Youtuber and aim for to become a software engineer.  </p>
                     </div>
                     <div class="col-sm-7 hidden-xs">
-                        <img src="assets/img/ipad-pro.png" alt="">
+                        <img src="assets/img/my-pic.jpg" alt="Owner Picture">
                     </div>
                 </div>
             </div>
@@ -210,7 +210,7 @@
                     <h3>Featured links</h3>
                     <ul class="list-unstyled">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="portfolio.html">Porfolio</a></li>
+                        <li><a href="youtube-sec.html">Youtube-Video</a></li>
                         <li class="active"><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
