Updated files and Htmls

--- a/index.html
+++ b/index.html
@@ -112,24 +112,16 @@
                     <div class="col-lg-4 col-md-3 col-xs-6" data-groups='["facts"]'>
                         <div class="portfolio-item">
                             <img src="assets/img/thumb-1.jpg" class="img-res" alt="">
-                            <h4 class="portfolio-item-title">About The Video</h4>
-                            <a href="https://www.youtube.com/embed/1CemcnStdLQ"><i class="fa fa-arrow-right"
+                            <h4 class="portfolio-item-title">Watch Video</h4>
+                            <a href="https://www.youtube.com/embed/1CemcnStdLQ"><i class="fa fa-play"
                                     aria-hidden="true"></i></a>
                         </div><!-- /.portfolio-item -->
                     </div>
                     <div class="col-lg-4 col-md-3 col-xs-6" data-groups='["reactions"]'>
                         <div class="portfolio-item">
                             <img src="assets/img/thumb-2.jpg" class="img-res" alt="">
-                            <h4 class="portfolio-item-title">About The Video</h4>
-                            <a href="https://www.youtube.com/embed/4KRJ7GAOuzs"><i class="fa fa-arrow-right"
-                                    aria-hidden="true"></i></a>
-                        </div><!-- /.portfolio-item -->
-                    </div>
-                    <div class="col-lg-4 col-md-3 col-xs-6" data-groups='["technology"]'>
-                        <div class="portfolio-item">
-                            <img src="assets/img/thumb-3.png" class="img-res" alt="">
-                            <h4 class="portfolio-item-title">About The Video</h4>
-                            <a href="https://www.youtube.com/embed/F3qqVaCSl0I"><i class="fa fa-arrow-right"
+                            <h4 class="portfolio-item-title">Watch Video</h4>
+                            <a href="https://www.youtube.com/embed/4KRJ7GAOuzs"><i class="fa fa-play"
                                     aria-hidden="true"></i></a>
                         </div><!-- /.portfolio-item -->
                     </div>
@@ -137,23 +129,31 @@
                         <div class="portfolio-item">
                             <img src="assets/img/thumb-4.jpg" class="img-res" alt="">
                             <h4 class="portfolio-item-title">Watch Video</h4>
-                            <a href="https://www.youtube.com/embed/ikj5xpig_g0"><i class="fa fa-arrow-right"
+                            <a href="https://www.youtube.com/embed/ikj5xpig_g0"><i class="fa fa-play"
+                                    aria-hidden="true"></i></a>
+                        </div><!-- /.portfolio-item -->
+                    </div>
+                    <div class="col-lg-4 col-md-3 col-xs-6" data-groups='["technology"]'>
+                        <div class="portfolio-item">
+                            <img src="assets/img/thumb-5.jpg" class="img-res" alt="">
+                            <h4 class="portfolio-item-title">Watch Video</h4>
+                            <a href="https://www.youtube.com/embed/ikj5xpig_g0"><i class="fa fa-play"
                                     aria-hidden="true"></i></a>
                         </div><!-- /.portfolio-item -->
                     </div>
                     <div class="col-lg-4 col-md-3 col-xs-6" data-groups='["reactions"]'>
                         <div class="portfolio-item">
-                            <img src="assets/img/thumb-5.jpg" class="img-res" alt="">
-                            <h4 class="portfolio-item-title">About The Video</h4>
-                            <a href="https://www.youtube.com/embed/fO8rvSzH18Y"><i class="fa fa-arrow-right"
+                            <img src="assets/img/thumb-6.jpg" class="img-res" alt="">
+                            <h4 class="portfolio-item-title">Watch Video</h4>
+                            <a href="https://www.youtube.com/embed/fO8rvSzH18Y"><i class="fa fa-play"
                                     aria-hidden="true"></i></a>
                         </div><!-- /.portfolio-item -->
                     </div>
                     <div class="col-lg-4 col-md-3 col-xs-6" data-groups='["facts"]'>
                         <div class="portfolio-item">
-                            <img src="assets/img/thumb-6.jpg" class="img-res" alt="">
-                            <h4 class="portfolio-item-title">About The Videom</h4>
-                            <a href="https://www.youtube.com/embed/V0jgmICL5bM"><i class="fa fa-arrow-right"
+                            <img src="assets/img/thumb-7.jpg" class="img-res" alt="">
+                            <h4 class="portfolio-item-title">Watch Video</h4>
+                            <a href="https://www.youtube.com/embed/V0jgmICL5bM"><i class="fa fa-play"
                                     aria-hidden="true"></i></a>
                         </div><!-- /.portfolio-item -->
                     </div>
