--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+O<!DOCTYPE html>
 <html lang="en">
 <head>
 
@@ -93,7 +93,7 @@
                         <p> I'm Aswanth from World of Aswanth.Welcome to My small world .I am a student,newbie Youtuber and aim for to become a software engineer.  </p>
                     </div>
                     <div class="col-sm-7 hidden-xs">
-                        <img src="assets/img/my-pic.jpg" alt="Owner Picture">
+                        <img src="" alt="Owner Picture">
                     </div>
                 </div>
             </div>
