--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@ O<!DOCTYPE html>
 
     <!-- Favicon
     ================================================== -->
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/channel-icon.jpg">
-    <link rel="icon" type="image/jpg" sizes="16x16" href="assets/img/channel-icon2.jpg">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/apple-touch-icon.png">
+    <link rel="icon" type="image/jpg" sizes="16x16" href="assets/img/channel-icon.jpg">
 
     <!-- Stylesheets
     ================================================== -->
