--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ O<!DOCTYPE html>
                         <p> I'm Aswanth from World of Aswanth.Welcome to My small world .I am a student,newbie Youtuber and aim for to become a software engineer.  </p>
                     </div>
                     <div class="col-sm-7 hidden-xs">
-                        <img src="" alt="Owner Picture">
+                        <img src="assets/img/mypic.png" alt="Owner Picture">
                     </div>
                 </div>
             </div>
