--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         <p> I'm Aswanth from World of Aswanth.Welcome to My small world .I am a student,newbie Youtuber and aim for to become a software engineer. </p>
                     </div>
                     <div class="col-sm-7 hidden-xs">
-                        <img src="/assets/img/my-pic.png" alt="Owner Picture">
+                        <img src="/assets/img/apple-touch-icon.png" alt="Owner Picture">
                     </div>
                 </div>
             </div>
