--- a/youtube-sec.html
+++ b/youtube-sec.html
@@ -171,6 +171,23 @@
                         </div>
                         <!-- /.portfolio-item -->
                     </div>
+                    <div class="col-lg-4 col-md-4 col-xs-6" data-groups='["facts"]'>
+                        <div class="portfolio-item">
+                            <img src="assets/img/thumb-8.jpg" class="img-res" alt="">
+                            <h4 class="portfolio-item-title">Watch Video</h4>
+                            <a href=""><i class="fa fa-play" aria-hidden="true"></i></a>
+                        </div>
+                        <!-- /.portfolio-item -->
+                    </div>
+                   <div class="col-lg-4 col-md-4 col-xs-6" data-groups='["technology"]'>
+                        <div class="portfolio-item">
+                            <img src="assets/img/thumb-9.jpg" class="img-res" alt="">
+                            <h4 class="portfolio-item-title">Watch Video</h4>
+                            <a href=""><i class="fa fa-play" aria-hidden="true"></i></a>
+                        </div>
+                        <!-- /.portfolio-item -->
+                    </div>
+
 
                 </div>
 
