--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <div class="hero-text">
                 <h1>Explore My World.</h1>
                 <p>Your Happiness is my Happiness</p>
-                <a href="site-section section-feature" class="btn btn-border">Learn more</a>
+                <a href="#about-me" class="btn btn-border">Learn more</a>
             </div>
             <!-- /.hero-text -->
         </div>
@@ -93,7 +93,7 @@
 
     <main id="main" class="site-main">
 
-        <section class="site-section section-features">
+        <section id="about-me" class="site-section section-features">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-5">
