--- a/youtube-sec.html
+++ b/youtube-sec.html
@@ -79,10 +79,10 @@
     <div id="hero" class="hero overlay subpage-hero portfolio-hero">
         <div class="hero-content">
             <div class="hero-text">
-                <h1>Portfolio</h1>
+                <h1>Youtube Videos</h1>
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                    <li class="breadcrumb-item active">Youtube Videos</li>
+                    
                 </ol>
             </div>
             <!-- /.hero-text -->
