--- a/contact.html
+++ b/contact.html
@@ -219,6 +219,7 @@
     <script src="assets/js/jquery.shuffle.min.js"></script>
     <script src="assets/js/script.js"></script>
     <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <script src="assets/js/send-email.js"></script>
 
     
     
