--- a/contact.html
+++ b/contact.html
@@ -96,7 +96,7 @@
                 <div class="row">
                     <div class="col-sm-7">
                         <h2>Send a message</h2>
-                        <form>
+                        <form onSubmit:"sendEmail(); reset(); return false;>
                             <div class="row">
                                 <div class="col-sm-6">
                                     <div class="form-group">
