--- a/contact.html
+++ b/contact.html
@@ -120,7 +120,7 @@
                                 <textarea class="form-control form-control-comment" id="message"></textarea>
                             </div>
                             <div class="text-center">
-                                <button class="btn btn-green">Contact us</button>
+                                <button type="submit" class="btn btn-green">Contact us</button>
                             </div>
                         </form>
                     </div>
