Updated files and Folders

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <div class="hero-text">
                 <h1>Explore My World.</h1>
                 <p>Your Happiness is my Happiness</p>
-                <a href="#about-me" class="btn btn-border">Learn more</a>
+                <a href="#about-me" class="btn btn-outline-light">Learn more</a>
             </div>
             <!-- /.hero-text -->
         </div>
@@ -195,7 +195,7 @@
             <div class="container">
                 <h2>Subscribe to my Youtube Channel </h2>
                 <form class="form-group newsletter-group">
-                    <input type="url" class="form-control" placeholder="World of Aswanth @youtube.com" required>
+                    <input type="url" class="form-control" placeholder="World of Aswanth @ youtube . com" disabled>
 
                     <a class="btn btn-red" href="https://www.youtube.com/channel/UCryR1uvY8xHZ3hs5QbVSUsg?sub_confirmation=1" target="_blank">Subscribe</a>
                 </form>
