--- a/index.html
+++ b/index.html
@@ -129,6 +129,15 @@
                     </div>
                     <div class="col-lg-4 col-md-3 col-xs-6" data-groups='["reactions"]'>
                         <div class="portfolio-item">
+                            <img src="assets/img/thumb-6.jpg" class="img-res" alt="">
+                            <h4 class="portfolio-item-title">Watch Video</h4>
+                            <a href="https://www.youtube.com/embed/fO8rvSzH18Y"><i class="fa fa-play"
+                                    aria-hidden="true"></i></a>
+                        </div>
+                        <!-- /.portfolio-item -->
+                    </div>
+                    <div class="col-lg-4 col-md-3 col-xs-6" data-groups='["reactions"]'>
+                        <div class="portfolio-item">
                             <img src="assets/img/thumb-2.jpg" class="img-res" alt="">
                             <h4 class="portfolio-item-title">Watch Video</h4>
                             <a href="https://www.youtube.com/embed/4KRJ7GAOuzs"><i class="fa fa-play"
@@ -154,15 +163,7 @@
                         </div>
                         <!-- /.portfolio-item -->
                     </div>
-                    <div class="col-lg-4 col-md-3 col-xs-6" data-groups='["reactions"]'>
-                        <div class="portfolio-item">
-                            <img src="assets/img/thumb-6.jpg" class="img-res" alt="">
-                            <h4 class="portfolio-item-title">Watch Video</h4>
-                            <a href="https://www.youtube.com/embed/fO8rvSzH18Y"><i class="fa fa-play"
-                                    aria-hidden="true"></i></a>
-                        </div>
-                        <!-- /.portfolio-item -->
-                    </div>
+                   
                     <div class="col-lg-4 col-md-3 col-xs-6" data-groups='["facts"]'>
                         <div class="portfolio-item">
                             <img src="assets/img/thumb-7.jpg" class="img-res" alt="">
@@ -206,7 +207,6 @@
 
     </main>
     <!-- /#main -->
-
     <footer id="colophon" class="site-footer">
         <div class="container">
             <div class="row">
@@ -221,6 +221,7 @@
                         <li><i class="fa fa-instagram" aria-hidden="true"></i><a href="https://www.instagram.com/world_of_aswanth">Instagram </a></li>
                         <li><i class="fa fa-github" aria-hidden="true"></i><a href="+37400900000">Aswanthds</a></li>
                         <li><i class="fa fa-youtube" aria-hidden="true"></i><a href="https://www.youtube.com/channel/UCryR1uvY8xHZ3hs5QbVSUsg?sub_confirmation=1">Youtube @ worldofaswanth</a></li>
+                        <li><i class="fa fa-linkedin" aria-hidden="true"></i><a href="https://www.linkedin.com/in/aswanth-ds-417745231/">Linkdein</a></li>
                     </ul>
                 </div>
                 <div class="clearfix visible-xs"></div>
@@ -242,13 +243,15 @@
                             <a class="twitter-bg" href="https://twitter.com/DsAswanth"><i class="fa fa-twitter"></i></a>
                             <a class="facebook-bg" href="https://www.facebook.com/aswanth.ds.980/"><i class="fa fa-facebook"></i></a>
                             <a class="pinterest" href="https://github.com/Aswanthds"><i class="fa fa-github"></i></a>
+                            <a class="linkedin" href="https://www.linkedin.com/in/aswanth-ds-417745231/"><i class="fa fa-linkedin"></i></a>
+                            
 
                         </div>
                         <!-- /.social-links -->
                     </div>
                     <div class="col-xs-4">
                         <div class="text-right">
-                            <p>&copy;redesign by worldofaswanth</p>
+                            <p>&copy; Redesigned by worldofaswanth</p>
                             <p>All Rights Reserved</p>
                         </div>
                     </div>
@@ -258,10 +261,11 @@
         <!-- /.copyright -->
     </footer>
 
+
+
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-   
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/bootstrap-select.min.js"></script>
@@ -269,7 +273,6 @@
     <script src="assets/js/jquery.countTo.min.js"></script>
     <script src="assets/js/jquery.shuffle.min.js"></script>
     <script src="assets/js/script.js"></script>
-
 
 
 </body>
