--- a/contact.html
+++ b/contact.html
@@ -96,52 +96,51 @@
     </main>
     <!-- /#main -->
 
-    <footer id=" colophon " class=" site-footer ">
-        <div class=" container ">
-            <div class=" row ">
-                <div class=" col-md-3 col-sm-4 col-xs-6 ">
-                    <a class=" site-title "><span>World</span>Of Aswanth</a>
+    <footer id="colophon" class="site-footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3 col-sm-4 col-xs-6">
+                    <a class="site-title"><span>World</span>Of Aswanth</a>
                     <p>I am a small Youtuber and a student. This is a personal Website Made by Me.</p>
                 </div>
-                <div class=" col-lg-offset-4 col-md-3 col-sm-4 col-md-offset-2 col-sm-offset-0 col-xs-6 ">
+                <div class="col-lg-offset-4 col-md-3 col-sm-4 col-md-offset-2 col-sm-offset-0 col-xs-6 ">
                     <h3>Keep in touch</h3>
-                    <ul class=" list-unstyled contact-links ">
-                        <li><i class=" fa fa-envelope " aria-hidden=" true "></i><a href=" mailto:worldofaswanth@gmail.com ">worldofaswanth@gmail.com</a></li>
-                        <li><i class=" fa fa-instagram " aria-hidden=" true "></i><a href=" https://www.instagram.com/world_of_aswanth ">Instagram </a></li>
-                        <li><i class=" fa fa-github " aria-hidden=" true "></i><a href=" https://github.com/Aswanthds ">Aswanthds</a></li>
-                        <li><i class=" fa fa-youtube " aria-hidden=" true "></i><a href=" https://www.youtube.com/channel/UCryR1uvY8xHZ3hs5QbVSUsg?sub_confirmation=1 ">Youtube
-                                @ worldofaswanth</a></li>
+                    <ul class="list-unstyled contact-links">
+                        <li><i class="fa fa-envelope" aria-hidden="true"></i><a href="mailto:worldofaswanth@gmail.com">worldofaswanth@gmail.com</a></li>
+                        <li><i class="fa fa-instagram" aria-hidden="true"></i><a href="https://www.instagram.com/world_of_aswanth">Instagram </a></li>
+                        <li><i class="fa fa-github" aria-hidden="true"></i><a href="+37400900000">Aswanthds</a></li>
+                        <li><i class="fa fa-youtube" aria-hidden="true"></i><a href="https://www.youtube.com/channel/UCryR1uvY8xHZ3hs5QbVSUsg?sub_confirmation=1">Youtube @ worldofaswanth</a></li>
+                        <li><i class="fa fa-linkedin" aria-hidden="true"></i><a href="https://www.linkedin.com/in/aswanth-ds-417745231/">Linkdein</a></li>
                     </ul>
                 </div>
-                <div class=" clearfix visible-xs "></div>
-                <div class=" col-lg-2 col-md-3 col-sm-4 col-xs-6 ">
+                <div class="clearfix visible-xs"></div>
+                <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
                     <h3>Featured links</h3>
-                    <ul class=" list-unstyled ">
-                        <li><a href=" index.html ">Home</a></li>
-                        <li><a href=" youtube-sec.html ">Youtube-Video</a></li>
-                        <li class=" active "><a href=" contact.html ">Contact</a></li>
+                    <ul class="list-unstyled">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="youtube-sec.html">Youtube-Video</a></li>
+                        <li class="active"><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
             </div>
         </div>
-        <div class=" copyright ">
-            <div class=" container ">
-                <div class=" row ">
-                    <div class=" col-xs-8 ">
-                        <div class=" social-links ">
-                            <a class=" twitter-bg " href=" https://twitter.com/DsAswanth "><i
-                                    class=" fa fa-twitter "></i></a>
-                            <a class=" facebook-bg " href=" https://www.facebook.com/aswanth.ds.980/ "><i
-                                    class=" fa fa-facebook "></i></a>
-                            <a class=" pinterest-bg " href=" https://github.com/Aswanthds "><i
-                                    class=" fa fa-github "></i></a>
+        <div class="copyright">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-8">
+                        <div class="social-links">
+                            <a class="twitter-bg" href="https://twitter.com/DsAswanth"><i class="fa fa-twitter"></i></a>
+                            <a class="facebook-bg" href="https://www.facebook.com/aswanth.ds.980/"><i class="fa fa-facebook"></i></a>
+                            <a class="pinterest" href="https://github.com/Aswanthds"><i class="fa fa-github"></i></a>
+                            <a class="linkedin" href="https://www.linkedin.com/in/aswanth-ds-417745231/"><i class="fa fa-linkedin"></i></a>
+                            
 
                         </div>
                         <!-- /.social-links -->
                     </div>
-                    <div class=" col-xs-4 ">
-                        <div class=" text-right ">
-                            <p>&copy; worldofaswanth</p>
+                    <div class="col-xs-4">
+                        <div class="text-right">
+                            <p>&copy; Redesigned by worldofaswanth</p>
                             <p>All Rights Reserved</p>
                         </div>
                     </div>
@@ -150,32 +149,19 @@
         </div>
         <!-- /.copyright -->
     </footer>
-    <!-- /#footer -->
 
 
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
-    <script src=" https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js "></script>
-    <script src=" assets/js/bootstrap.min.js "></script>
-    <script src=" assets/js/bootstrap-select.min.js "></script>
-    <script src=" assets/js/jquery.slicknav.min.js "></script>
-    <script src=" assets/js/jquery.countTo.min.js "></script>
-    <script src=" assets/js/jquery.shuffle.min.js "></script>
-    <script src=" assets/js/script.js "></script>
-    <!-- <script src=" https://smtpjs.com/v3/smtp.js "></script> -->
-
-
-
-
     <!-- Placed at the end of the document so the pages load faster -->
-
-
-
-
-
-
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/bootstrap-select.min.js"></script>
+    <script src="assets/js/jquery.slicknav.min.js"></script>
+    <script src="assets/js/jquery.countTo.min.js"></script>
+    <script src="assets/js/jquery.shuffle.min.js"></script>
+    <script src="assets/js/script.js"></script>
 
 
 </body>
