--- a/index.html
+++ b/index.html
@@ -122,8 +122,7 @@
                         <div class="portfolio-item">
                             <img src="assets/img/thumb-1.jpg" class="img-res" alt="">
                             <h4 class="portfolio-item-title">Watch Video</h4>
-                            <a href="https://www.youtube.com/embed/1CemcnStdLQ"><i class="fa fa-play"
-                                    aria-hidden="true"></i></a>
+                            <a href="https://www.youtube.com/embed/1CemcnStdLQ"><img src="assets/img/play_icon.png" style="height: 45px; width: 45px;"></img></a>
                         </div>
                         <!-- /.portfolio-item -->
                     </div>
@@ -131,8 +130,7 @@
                         <div class="portfolio-item">
                             <img src="assets/img/thumb-6.jpg" class="img-res" alt="">
                             <h4 class="portfolio-item-title">Watch Video</h4>
-                            <a href="https://www.youtube.com/embed/fO8rvSzH18Y"><i class="fa fa-play"
-                                    aria-hidden="true"></i></a>
+                            <a href="https://www.youtube.com/embed/fO8rvSzH18Y"><img src="assets/img/play_icon.png" style="height: 45px; width: 45px;"></img></a>
                         </div>
                         <!-- /.portfolio-item -->
                     </div>
@@ -140,8 +138,7 @@
                         <div class="portfolio-item">
                             <img src="assets/img/thumb-2.jpg" class="img-res" alt="">
                             <h4 class="portfolio-item-title">Watch Video</h4>
-                            <a href="https://www.youtube.com/embed/4KRJ7GAOuzs"><i class="fa fa-play"
-                                    aria-hidden="true"></i></a>
+                            <a href="https://www.youtube.com/embed/4KRJ7GAOuzs"><img src="assets/img/play_icon.png" style="height: 45px; width: 45px;"></img></a>
                         </div>
                         <!-- /.portfolio-item -->
                     </div>
@@ -149,8 +146,7 @@
                         <div class="portfolio-item">
                             <img src="assets/img/thumb-4.jpg" class="img-res" alt="">
                             <h4 class="portfolio-item-title">Watch Video</h4>
-                            <a href="https://www.youtube.com/embed/ikj5xpig_g0"><i class="fa fa-play"
-                                    aria-hidden="true"></i></a>
+                            <a href="https://www.youtube.com/embed/ikj5xpig_g0"><img src="assets/img/play_icon.png" style="height: 45px; width: 45px;"></img></a>
                         </div>
                         <!-- /.portfolio-item -->
                     </div>
@@ -158,8 +154,7 @@
                         <div class="portfolio-item">
                             <img src="assets/img/thumb-5.jpg" class="img-res" alt="">
                             <h4 class="portfolio-item-title">Watch Video</h4>
-                            <a href="https://www.youtube.com/embed/ikj5xpig_g0"><i class="fa fa-play"
-                                    aria-hidden="true"></i></a>
+                            <a href="https://www.youtube.com/embed/ikj5xpig_g0"><img src="assets/img/play_icon.png" style="height: 45px; width: 45px;"></img></a>
                         </div>
                         <!-- /.portfolio-item -->
                     </div>
@@ -168,8 +163,7 @@
                         <div class="portfolio-item">
                             <img src="assets/img/thumb-7.jpg" class="img-res" alt="">
                             <h4 class="portfolio-item-title">Watch Video</h4>
-                            <a href="https://www.youtube.com/embed/V0jgmICL5bM"><i class="fa fa-play"
-                                    aria-hidden="true"></i></a>
+                            <a href="https://www.youtube.com/embed/V0jgmICL5bM"><img src="assets/img/play_icon.png" style="height: 45px; width: 45px;"></img></a>
                         </div>
                         <!-- /.portfolio-item -->
                     </div>
@@ -218,10 +212,10 @@
                     <h3>Keep in touch</h3>
                     <ul class="list-unstyled contact-links">
                         <li><i class="fa fa-envelope" aria-hidden="true"></i><a href="mailto:worldofaswanth@gmail.com">worldofaswanth@gmail.com</a></li>
-                        <li><i class="fa fa-instagram" aria-hidden="true"></i><a href="https://www.instagram.com/world_of_aswanth">Instagram </a></li>
-                        <li><i class="fa fa-github" aria-hidden="true"></i><a href="+37400900000">Aswanthds</a></li>
-                        <li><i class="fa fa-youtube" aria-hidden="true"></i><a href="https://www.youtube.com/channel/UCryR1uvY8xHZ3hs5QbVSUsg?sub_confirmation=1">Youtube @ worldofaswanth</a></li>
-                        <li><i class="fa fa-linkedin" aria-hidden="true"></i><a href="https://www.linkedin.com/in/aswanth-ds-417745231/">Linkdein</a></li>
+                        <li><i class="fa fa-instagram" aria-hidden="true"></i><a href="https://www.instagram.com/itz__aswanthdsvjmd">Instagram </a></li>
+                        <li><img src="assets/img/github-bl.svg" style="height: 20px;width: 20px;"/><a href="https://github.com/Aswanthds">Aswanthds</a></li>
+                        <li><img src="assets/img/icons8-youtube.svg" style="height: 20px;width: 20px;"/><a href="https://www.youtube.com/channel/UCryR1uvY8xHZ3hs5QbVSUsg?sub_confirmation=1">worldofaswanth</a></li>
+                        <li><img src="assets/img/linkedin-bl_sm.svg" style="height: 20px;width: 20px;"/></i><a href="https://www.linkedin.com/in/aswanth-ds-417745231/">Linkdein</a></li>
                     </ul>
                 </div>
                 <div class="clearfix visible-xs"></div>
@@ -240,10 +234,10 @@
                 <div class="row">
                     <div class="col-xs-8">
                         <div class="social-links">
-                            <a class="twitter-bg" href="https://twitter.com/DsAswanth"><i class="fa fa-twitter"></i></a>
-                            <a class="facebook-bg" href="https://www.facebook.com/aswanth.ds.980/"><i class="fa fa-facebook"></i></a>
-                            <a class="pinterest" href="https://github.com/Aswanthds"><i class="fa fa-github"></i></a>
-                            <a class="linkedin" href="https://www.linkedin.com/in/aswanth-ds-417745231/"><i class="fa fa-linkedin"></i></a>
+                            <a class="twitter-bg" href="https://twitter.com/DsAswanth"><img src="assets/img/twitter-cl.svg" style="height: 20px;width: 20px;"/></a>
+                            <a class="facebook-bg" href="https://www.facebook.com/aswanth.ds.980/"><img src="assets/img/fb-icon_bl.svg" style="height: 20px;width: 20px;"/></a>
+                            <a class="pinterest" href="https://github.com/Aswanthds"><img src="assets/img/github-bl.svg" style="height: 20px;width: 20px;"/></a>
+                            <a class="linkedin" href="https://www.linkedin.com/in/aswanth-ds-417745231/"><img src="assets/img/linkedin-bl.svg" style="height: 20px;width: 20px;"/></a>
                             
 
                         </div>
@@ -251,8 +245,8 @@
                     </div>
                     <div class="col-xs-4">
                         <div class="text-right">
-                            <p>&copy; Redesigned by worldofaswanth</p>
-                            <p>All Rights Reserved</p>
+                            <p> Redesigned by worldofaswanth</p>
+                            
                         </div>
                     </div>
                 </div>
