--- a/youtube-sec.html
+++ b/youtube-sec.html
@@ -219,10 +219,10 @@
                     <h3>Keep in touch</h3>
                     <ul class="list-unstyled contact-links">
                         <li><i class="fa fa-envelope" aria-hidden="true"></i><a href="mailto:worldofaswanth@gmail.com">worldofaswanth@gmail.com</a></li>
-                        <li><i class="fa fa-instagram" aria-hidden="true"></i><a href="https://www.instagram.com/world_of_aswanth">Instagram </a></li>
-                        <li><i class="fa fa-github" aria-hidden="true"></i><a href="+37400900000">Aswanthds</a></li>
-                        <li><i class="fa fa-youtube" aria-hidden="true"></i><a href="https://www.youtube.com/channel/UCryR1uvY8xHZ3hs5QbVSUsg?sub_confirmation=1">Youtube @ worldofaswanth</a></li>
-                        <li><i class="fa fa-linkedin" aria-hidden="true"></i><a href="https://www.linkedin.com/in/aswanth-ds-417745231/">Linkdein</a></li>
+                        <li><i class="fa fa-instagram" aria-hidden="true"></i><a href="https://www.instagram.com/itz__aswanthdsvjmd">Instagram </a></li>
+                        <li><img src="assets/img/github-bl.svg" style="height: 20px;width: 20px;"/><a href="https://github.com/Aswanthds">Aswanthds</a></li>
+                        <li><img src="assets/img/icons8-youtube.svg" style="height: 20px;width: 20px;"/><a href="https://www.youtube.com/channel/UCryR1uvY8xHZ3hs5QbVSUsg?sub_confirmation=1">worldofaswanth</a></li>
+                        <li><img src="assets/img/linkedin-bl_sm.svg" style="height: 20px;width: 20px;"/></i><a href="https://www.linkedin.com/in/aswanth-ds-417745231/">Linkdein</a></li>
                     </ul>
                 </div>
                 <div class="clearfix visible-xs"></div>
@@ -241,10 +241,10 @@
                 <div class="row">
                     <div class="col-xs-8">
                         <div class="social-links">
-                            <a class="twitter-bg" href="https://twitter.com/DsAswanth"><i class="fa fa-twitter"></i></a>
-                            <a class="facebook-bg" href="https://www.facebook.com/aswanth.ds.980/"><i class="fa fa-facebook"></i></a>
-                            <a class="pinterest" href="https://github.com/Aswanthds"><i class="fa fa-github"></i></a>
-                            <a class="linkedin" href="https://www.linkedin.com/in/aswanth-ds-417745231/"><i class="fa fa-linkedin"></i></a>
+                            <a class="twitter-bg" href="https://twitter.com/DsAswanth"><img src="assets/img/twitter-cl.svg" style="height: 20px;width: 20px;"/></a>
+                            <a class="facebook-bg" href="https://www.facebook.com/aswanth.ds.980/"><img src="assets/img/fb-icon_bl.svg" style="height: 20px;width: 20px;"/></a>
+                            <a class="pinterest" href="https://github.com/Aswanthds"><img src="assets/img/github-bl.svg" style="height: 20px;width: 20px;"/></a>
+                            <a class="linkedin" href="https://www.linkedin.com/in/aswanth-ds-417745231/"><img src="assets/img/linkedin-bl.svg" style="height: 20px;width: 20px;"/></a>
                             
 
                         </div>
@@ -252,8 +252,8 @@
                     </div>
                     <div class="col-xs-4">
                         <div class="text-right">
-                            <p>&copy; Redesigned by worldofaswanth</p>
-                            <p>All Rights Reserved</p>
+                            <p> Redesigned by worldofaswanth</p>
+                            
                         </div>
                     </div>
                 </div>
