Edited Links on 1-04-2022

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         <div class="portfolio-item">
                             <img src="assets/img/thumb-1.jpg" class="img-res" alt="">
                             <h4 class="portfolio-item-title">Watch Video</h4>
-                            <a href="https://www.youtube.com/embed/1CemcnStdLQ"><img src="assets/img/play_icon.png" style="height: 45px; width: 45px;"></img></a>
+                            <a href="https://youtu.be/1CemcnStdLQ"><img src="assets/img/play_icon.png" style="height: 45px; width: 45px;"></img></a>
                         </div>
                         <!-- /.portfolio-item -->
                     </div>
@@ -130,7 +130,7 @@
                         <div class="portfolio-item">
                             <img src="assets/img/thumb-6.jpg" class="img-res" alt="">
                             <h4 class="portfolio-item-title">Watch Video</h4>
-                            <a href="https://www.youtube.com/embed/fO8rvSzH18Y"><img src="assets/img/play_icon.png" style="height: 45px; width: 45px;"></img></a>
+                            <a href="https://youtu.be/V0jgmICL5bM"><img src="assets/img/play_icon.png" style="height: 45px; width: 45px;"></img></a>
                         </div>
                         <!-- /.portfolio-item -->
                     </div>
@@ -138,7 +138,7 @@
                         <div class="portfolio-item">
                             <img src="assets/img/thumb-2.jpg" class="img-res" alt="">
                             <h4 class="portfolio-item-title">Watch Video</h4>
-                            <a href="https://www.youtube.com/embed/4KRJ7GAOuzs"><img src="assets/img/play_icon.png" style="height: 45px; width: 45px;"></img></a>
+                            <a href="https://www.youtube.com/watch?v=4KRJ7GAOuzs"><img src="assets/img/play_icon.png" style="height: 45px; width: 45px;"></img></a>
                         </div>
                         <!-- /.portfolio-item -->
                     </div>
@@ -146,7 +146,7 @@
                         <div class="portfolio-item">
                             <img src="assets/img/thumb-4.jpg" class="img-res" alt="">
                             <h4 class="portfolio-item-title">Watch Video</h4>
-                            <a href="https://www.youtube.com/embed/ikj5xpig_g0"><img src="assets/img/play_icon.png" style="height: 45px; width: 45px;"></img></a>
+                            <a href="https://www.youtube.com/watch?v=ikj5xpig_g0"><img src="assets/img/play_icon.png" style="height: 45px; width: 45px;"></img></a>
                         </div>
                         <!-- /.portfolio-item -->
                     </div>
@@ -154,7 +154,7 @@
                         <div class="portfolio-item">
                             <img src="assets/img/thumb-5.jpg" class="img-res" alt="">
                             <h4 class="portfolio-item-title">Watch Video</h4>
-                            <a href="https://www.youtube.com/embed/ikj5xpig_g0"><img src="assets/img/play_icon.png" style="height: 45px; width: 45px;"></img></a>
+                            <a href="https://youtu.be/fO8rvSzH18Y"><img src="assets/img/play_icon.png" style="height: 45px; width: 45px;"></img></a>
                         </div>
                         <!-- /.portfolio-item -->
                     </div>
@@ -163,7 +163,7 @@
                         <div class="portfolio-item">
                             <img src="assets/img/thumb-7.jpg" class="img-res" alt="">
                             <h4 class="portfolio-item-title">Watch Video</h4>
-                            <a href="https://www.youtube.com/embed/V0jgmICL5bM"><img src="assets/img/play_icon.png" style="height: 45px; width: 45px;"></img></a>
+                            <a href="https://www.youtube.com/watch?v=V0jgmICL5bM"><img src="assets/img/play_icon.png" style="height: 45px; width: 45px;"></img></a>
                         </div>
                         <!-- /.portfolio-item -->
                     </div>
